crates/compiler/src/tests/e2e/good/0207_fn_add_uint8/main.gom
fn add_uint8(a: uint8, b: uint8) -> uint8 {
    a + b
}

fn main() {
    let r = add_uint8(10, 20);
    println(r.to_string());
}
