crates/compiler/src/tests/e2e/bad/0017_unit_arithmetic/main.gom
fn log_value(x: int32) -> unit {
  println(x)
}

fn main() -> unit {
  let total = log_value(10) + log_value(20);
  println(total)
}
